# FinETL

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  plan.md  pyproject.toml
.github/workflows/: scheduled_ohlcv_to_hf.yml  tests.yml
configs/: example.yaml
scripts/: push_ohlcv_to_hf.py  run_example.py
src/finetl/: __init__.py  base.py  exceptions.py  finetl.py  models.py
src/finetl/config/: __init__.py  loader.py  schema.py
src/finetl/extraction/: __init__.py  yfinance.py
src/finetl/loading/: __init__.py  csv.py  huggingface.py  parquet.py  postgresql.py  registry.py
tests/: __init__.py  conftest.py  test_config.py  test_extraction.py  test_finetl.py  test_loading.py
