[project]
name = "finetl"
version = "0.1.0"
description = ""
authors = [
    {name = "Euan",email = "euan.m.campbell@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "yfinance (>=0.2.66,<0.3.0)",
    "datasets (>=4.4.2,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
